Adicionado interface de adição de medicamentos e lógica de lembretes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application
+
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,7 +14,10 @@
         android:theme="@style/Theme.MedicaApp"
         tools:targetApi="31">
         <activity
-            android:name=".ListMedItem"
+            android:name=".ui.listMedReminder.ListMedReminderItem"
+            android:exported="false"/>
+        <activity
+            android:name=".ui.listMed.ListMedItem"
             android:exported="false" />
         <activity
             android:name=".HomeActivity"
@@ -28,5 +33,11 @@
             </intent-filter>
         </activity>
     </application>
+
+
+
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.SET_ALARM" />
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
 
 </manifest>
